[gd_scene load_steps=15 format=3 uid="uid://ds77gcxom6nth"]

[ext_resource type="Texture2D" uid="uid://bkmuu5ah5pqml" path="res://assets/Art/Sleigh.png" id="1_1gnui"]
[ext_resource type="Script" path="res://scripts/boss.gd" id="1_8i8d2"]
[ext_resource type="AudioStream" uid="uid://46f2vshhqe1k" path="res://assets/Sounds/boss_hit.wav" id="3_yl0ck"]
[ext_resource type="AudioStream" uid="uid://cxobcnqgndpu0" path="res://assets/Sounds/explosion.wav" id="4_e6uy4"]
[ext_resource type="FontFile" uid="uid://xnkktihrvv7a" path="res://assets/upheavtt.ttf" id="5_8yaqr"]
[ext_resource type="PackedScene" uid="uid://dcfgvtp43tdmc" path="res://BossDialogue.tscn" id="5_doel8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bmfkh"]
atlas = ExtResource("1_1gnui")
region = Rect2(0, 0, 40, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_6do4w"]
atlas = ExtResource("1_1gnui")
region = Rect2(40, 0, 40, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxfxw"]
atlas = ExtResource("1_1gnui")
region = Rect2(80, 0, 40, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2y03"]
atlas = ExtResource("1_1gnui")
region = Rect2(120, 0, 40, 140)

[sub_resource type="SpriteFrames" id="SpriteFrames_xev2s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmfkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6do4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxfxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2y03")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_numqb"]
size = Vector2(85, 135)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pl5g0"]
bg_color = Color(0.466667, 0.14902, 0.156863, 0.713726)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(5.29438e-07, 0.452446, 0.275462, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cx0j0"]
font = ExtResource("5_8yaqr")
font_size = 18
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Boss" type="CharacterBody2D" groups=["Boss"]]
z_index = 4
texture_filter = 1
collision_layer = 4
collision_mask = 4
script = ExtResource("1_8i8d2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_xev2s")
autoplay = "default"
frame_progress = 0.548924

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 139.5)
shape = SubResource("RectangleShape2D_numqb")

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_yl0ck")
bus = &"SFX"

[node name="BossDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_e6uy4")
bus = &"SFX"

[node name="Control" parent="." instance=ExtResource("5_doel8")]
unique_name_in_owner = true
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Right Text" type="MarginContainer" parent="CanvasLayer"]
offset_left = 9.0
offset_top = 7.0
offset_right = 217.0
offset_bottom = 48.0
size_flags_horizontal = 0

[node name="Panel" type="Panel" parent="CanvasLayer/Right Text"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pl5g0")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Right Text"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="DistText" type="Label" parent="CanvasLayer/Right Text/MarginContainer"]
z_index = 5
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Distance:"
label_settings = SubResource("LabelSettings_cx0j0")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
